--- a/chat/src/component/chat/chat.css
+++ b/chat/src/component/chat/chat.css
@@ -23,6 +23,35 @@
     height: 70%;
     box-sizing: border-box;
 }
+.viewerPage{
+    z-index: 1;
+    display: flex;
+    align-items: start;
+    position: fixed;
+    padding: 0px 60px 0px 60px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    box-sizing: border-box;
+}
+.viewerPage .downloadBtn{
+  margin-top: 2rem;
+  z-index: 99;
+  margin-left: -7rem;
+  border-radius: 1rem;
+  border: navajowhite;
+  background: #ffb6b6;
+  cursor: pointer;
+}
+
+#ReactSimpleImageViewer{
+    position: relative;
+}
+.styles-module_navigation__1pqAE{
+    display: none !important;
+}
 .inputBox{
     border: 0.2vmax solid black;
     height: 15%;
